[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
defautl = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
#engine
bevy = "0.12.0"
#hierarchy inspector debug
bevy-inspector-egui = { version = "0.21.0", optional = true }
#console debug
colored = { version = "2.0.4", optional = true }
#random
rand = "0.8.5"
#serialization
serde = "1.0.192"
